# CircuitPython-Macropad

./: .gitmodules  LL_Honoka3_128x64.pbm  README.md  hw_test.py  pbm_codec.py
c_module/: Makefile  README.md  macro.c  macropad.mpy
c_module/external_module/: build.sh  macro.c  macro.h  main.py  micropython.cmake  micropython.mk  upload.sh  usb_descriptors.c
c_module/mpy_module/: AAAtusb_config.h  Assortednotes.txt  Makefile  macro.c  macropad.mpy  mpy_notes.txt
c_module/usb_c_lib/: CMakeLists.txt  usb_lib.c
kdl/: kdl.py  main.py
python_firmware/: code_1.py  hw_test.py
python_firmware/kdl/: kdl.py  mc_test.kdl  test.kdl
